--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "Redux",
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "webpack"
+    "build": "webpack",
+    "compile": "babel src/*.js -d dist"
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
@@ -14,6 +15,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "object-assign": "^4.1.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
